# ChangeLog for sys-boot/unetbootin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/unetbootin/ChangeLog,v 1.4 2009/02/02 07:32:58 jer Exp $

*unetbootin-310 (02 Feb 2009)

  02 Feb 2009; Jeroen Roovers <jer@gentoo.org>
  -files/unetbootin-304-syslinux-gentoo.patch,
  +files/unetbootin-gentoo.patch, unetbootin-304-r1.ebuild,
  unetbootin-307.ebuild, +unetbootin-310.ebuild:
  Rename patch. Version bump (and use qt4.eclass instead of INSTALL).

*unetbootin-307 (26 Jan 2009)

  26 Jan 2009; Jeroen Roovers <jer@gentoo.org> +unetbootin-307.ebuild:
  Version bump.

*unetbootin-304-r1 (11 Jan 2009)

  11 Jan 2009; Jeroen Roovers <jer@gentoo.org>
  +files/unetbootin-304-syslinux-gentoo.patch, -unetbootin-304.ebuild,
  +unetbootin-304-r1.ebuild:
  Marked ~amd64 thanks to Markos Chandras and Xavier Neys (bug #254316).
  Apply syslinux patch thanks to Xavier Neys (bug #254419).

*unetbootin-304 (08 Jan 2009)

  08 Jan 2009; Jeroen Roovers <jer@gentoo.org> +metadata.xml,
  +unetbootin-304.ebuild:
  Initial commit (bug #245749).
