@@ -2,8 +2,10 @@ AUX unetbootin-gentoo.patch 947 RMD160 b4d3400d91a3e02c8a865186202209b1e17562dc 
 DIST unetbootin-source-304.tar.gz 139665 RMD160 ff4ff040d920d7ca9262596a623500555a8a42e3 SHA1 5428b21eace1d79b76541f169f37d61681e86c4b SHA256 1f52cf2e7f6e57a7dcf9e9a061b1d87150d37520948586526d400f11806c66a5
 DIST unetbootin-source-307.tar.gz 141417 RMD160 2ed53d6e2768c2f2b531228305826ae2742594c0 SHA1 6acd80f63b2354b942460fe351fbc6500419bbce SHA256 723d6d2b61db4a6038b7e7d5f8382936d641c267720c6954f5efff5ea0d481d3
 DIST unetbootin-source-310.tar.gz 141070 RMD160 e265ac334a05fe2fcddaac397b8a1c2d7fee1933 SHA1 62edc091603fdccfdd1b1c1a718b4b4ec585b710 SHA256 dd993b546beb412118af349d74ee725ce3866a0216a27dbadf8e5a60628dce11
+DIST unetbootin-source-312.tar.gz 141104 RMD160 9158a3c55e11004f1a0b5e2db8b751193c041b58 SHA1 9ba85dc488d05b525984d927bff089f543a42841 SHA256 fc2bfe692f36978675bb7dbaf03d572278d25012dbdc0360eecc32ac25aa80b3
 EBUILD unetbootin-304-r1.ebuild 830 RMD160 2fe1c2d10518c4639a912dd44ff418e7aa15e91f SHA1 0bd10920806ab67411b248a9ee8d43ab050efa92 SHA256 bafa73f80d25f11a892d7aec39caa8cdf45cc6d817c46003f17d38d9caafffc7
 EBUILD unetbootin-307.ebuild 827 RMD160 2903ecf16ab90311256d8af0e40298e927216b58 SHA1 8171d9c261a747be02ae9129a140e85457c63f1d SHA256 2b098878244b9fcd59e4b13b4bca7cf4853594a97641a9614914835f37440a18
 EBUILD unetbootin-310.ebuild 817 RMD160 83becc972a34bea90d5b57cb20566ff36d670fe9 SHA1 99f9b54b407604e52034854f86f978dfabf8c812 SHA256 32bf10cc3b6cca39c4e089d8c1fe847dfbf1b026b0db22285b81e3be6c7333e5
-MISC ChangeLog 1099 RMD160 d4a7e447fddf6f5b12532a394cb064a89104bcb6 SHA1 51eb9c6002dcb51f85ec5ead837a8e798cd793f5 SHA256 a38070f464b0697e9177530a1cf2559084758e4851818cb2fd61f3284f5c667c
+EBUILD unetbootin-312.ebuild 817 RMD160 03de01c4ba3e9252f6b6535fc65ff9d5168dc438 SHA1 318299b515b73c4d87f825c7854a8f8cb4642692 SHA256 063e081d425b2bcb9fba2dae80d838b343f9dc84eee23b78e984f75f13e1c800
+MISC ChangeLog 1218 RMD160 76cadd408ac26b2fc89d6f60acabd0a96bf8b0da SHA1 5c76d77050336764ad18646a10cbe1397b2d433f SHA256 a15fec530316bd03681affdc8ab8e68691929eb160c654e2f9f72aa73679dfc1
 MISC metadata.xml 247 RMD160 ce510949efadc662a8bdf3f163ab8da65425031b SHA1 9e77d3a27a86999fbe9fd9c8098a6f487512cd89 SHA256 219ac51d48f3a246086b75c336a1be44caafec3dd2c86ba61a44caa6374778df
